test/compile_errors/err_issue57_sibling_type_leak.w
//! expect-error: unknown type

use issue57.no_import_helper
use issue57.no_import_user

fn main:
    assert(true)
